# clinical-risk-copilot

./: .gitignore  README.md
docs/: phase-1-contract.md
services/health_api/: pyproject.toml
services/health_api/frontend/: index.html
services/health_api/src/health_api/: main.py  patient_registry.py  patient_summary.py  stub_provider.py
